2002-05-29  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftSetupEncoding):
	* libs/Fft.h:
	* libs/FRender.h:
	Added Xft2 support

	* acinclude.m4:
	* configure.in:
	Added detection for fontconfig and Xft2. Added FT2 CFLAGS and LIBS
	to Xft FLAGS and LIBS

	* fvwm/Makefile.am:
	* libs/Makefile.am: 
	Put $(Xft_CFLAGS) before $(X_CFLAGS) to be able to use an independent
	Xft2 library. Removed FT2 CFLAGS and LIBS
	
2002-05-27  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	* acconfig.h:
	* configure.in:
	Some Xft2 and fontconfig preparation

	* libs/Flocale.h:
	* libs/Flocale.c (FlocaleParseShadow):
	(FlocaleLoadFont):
	(FlocaleGetShadowTextPosition):
	Added offset to shadow text

	* libs/Flocale.h:
	Fixed the position of ne shadow text and remove some unused #define

2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/colorset.c (parse_colorset):
	fixed integer overflow in average colour calculation

2002-05-27  olicha  <olivier.chapuis@free.fr>

	* libs/gravity.c (GetNextMultiDirection):
	(ParseMultiDirectionArgument):
	* libs/gravity.h:
	Added a multi direction type which is a "<<" version of direction
	type. Added a parse and a next functions

	* libs/Flocale.h:
	* libs/Flocale.c (FlocaleParseShadow):
	(FlocaleGetNextShadowDirection):
	(FlocaleGetShadowTextPosition):
	Used gravity multi direction type and functions. Removed
	FlocaleGetNextShadowDirection

2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	fixed a problem w/ colormap transition when transient window died

	* fvwm/add_window.c (AddWindow):
	clean up

	* fvwm/session.c (getUniqueStateFilename):
	applied security patch by Jan Echternach

	* fvwm/fvwm.c (InitVariables):
	Properly initialise Scr.flags.is_pointer_on_this_screen

	* libs/fvwmlib.h (FvwmFont):
	* fvwm/fvwm.c (setVersionInfo):
	* configure.in:
	* config.h.in:
	* acconfig.h (MULTIBYTE):
	removed MULTIBYTE option (unconditionally on)

2002-05-26  Dominik Vogt  <dominik.vogt@gmx.de>
